had caps lock and scrolllock turn off underglow when off

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/*.uf2": true
     },
     "files.associations": {
+        "*.as": "javascript",
         "*.h": "c",
         "*.c": "c",
         "*.inc": "c",
@@ -18,7 +19,11 @@
         "xstddef": "c",
         "type_traits": "c",
         "utility": "c",
-        "ranges": "c"
+        "ranges": "c",
+        "algorithm": "c",
+        "chrono": "c",
+        "limits": "c",
+        "random": "c"
     },
     "[markdown]": {
         "editor.trimAutoWhitespace": false,
